@@ -89,3 +89,6 @@
 
 /* Build host information. */
 #define MAKE_HOST "i386-pc-msdosdjgpp"
+
+/* Grok DOS paths (drive specs and backslash path element separators) */
+#define HAVE_DOS_PATHS
